# audio_files

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/application/: errors.py  file_manager.py  transaction_manager.py
app/application/auth/: identity_provider.py  oauth.py  token_provider.py
app/application/entities/: audio.py  ids.py  refresh_session.py  user.py
app/application/errors/: auth.py  base.py  files.py  user.py
app/application/factories/: refresh_session.py
app/application/gateways/: audio_file.py  refresh_session.py  user.py
app/application/services/: auth_service.py  upload_file.py  user_files.py  user_service.py
app/entrypoint/: config.py  ioc.py  main.py
app/infrastructure/auth/: auth_token_gettable.py  config.py  http_idp.py  jose_jwt_token_provider.py  yandex_oauth.py
app/infrastructure/databases/postgres/: config.py  setup.py  transaction_manager.py
app/infrastructure/databases/postgres/gateways/: audio_file.py  refresh_session.py  user.py
app/infrastructure/databases/postgres/migrations/: env.py
app/infrastructure/databases/postgres/migrations/versions/: 2025_03_29_1213-00001_init.py  2025_03_30_1241-00001_init.py  (+1 more)
app/infrastructure/databases/postgres/tables/: __init__.py  audio_file.py  base.py  map.py  refresh_session.py  user.py
app/infrastructure/file_manager/: config.py  local_file_manager.py
app/presentation/: event_handlers.py
app/presentation/http/: auth.py  setup.py
app/presentation/http/routers/: admin.py  auth.py  user.py
