[tool.poetry]
name = "audio-files"
version = "0.1.0"
description = ""
authors = ["Сократ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
dishka = "^1.5.1"
sqlalchemy = {version = "^2.0.40", extras = ["asyncio"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
